Print style tweak for quarterly narrative

--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -23,7 +23,7 @@
       <hr style="page-break-after: always;"/>
     <% end %>
   <% end %>
-  <h2>
+  <h2 class="all-programs">
     <%= reporting_agency %> &mdash; 
     <%= report_month_range(@report.start_date, @report.after_end_date) %> &mdash; All Programs
   </h2>
