Add Autosizing for text areas

--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -133,7 +133,7 @@
 
       <li class="selfclear">
         <%= form.label :notes %>
-        <%= form.text_area :notes %>
+        <%= form.text_area :notes, :class => "autosize" %>
       </li>
     </ol>
     
