Add autosize to textareas throughout

--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -20,7 +20,7 @@
       <ol class="section second">
         <li>
           <h2 class="section-header">Description</h2>
-          <%= f.text_area :description %>
+          <%= f.text_area :description, :class => :autosize %>
         </li>
       </ol>
     </div>
