--- a/app/views/funding_sources/_form.html.erb
+++ b/app/views/funding_sources/_form.html.erb
@@ -13,7 +13,7 @@
       </li>
       <li class="selfclear">
         <%= form.label :notes %>
-        <%= form.text_area :notes %>
+        <%= form.text_area :notes, :class => :autosize %>
       </li>
     </ol>
     
