--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -34,6 +34,10 @@
         <% end %>
       </p>
     </li>
+    <li>
+      <%= f.label :dropoff_address, "Google Route:" %>
+      <%= raw gmaps_route_link @trip.pickup_address, @trip.dropoff_address, "" %>
+    </li>
     <li<%= mark_if_changed(@trip,:volunteer_trip) %>>
       <%= f.label :volunteer_trip, "Volunteer Trip:", :class => "checkbox" %> 
       <%= f.check_box :volunteer_trip %>
