Add trip count to trips listing

--- a/app/views/trips/list.html.erb
+++ b/app/views/trips/list.html.erb
@@ -5,7 +5,7 @@
 <%= render('search', :allow_csv => true, :action => :list) if @query.display_search_form %>
 
 <h2 id="result-count">
-  <%= pluralize @trips.total_entries, "record" %> found.
+  <%= pluralize @trips.total_entries, "record" %> found, <%= pluralize @trip_count, "trips" %>.
 </h2>
 
 <%= render 'trips', :trips => @trips %>
