--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -171,7 +171,7 @@
       </p>
     </li>
     <li<%= mark_if_changed(@trip,:bpa_billing_distance) %>>
-      <%= f.label :bpa_billing_distance, "BPA Billing Distance:"  %>
+      <%= f.label :bpa_billing_distance, "Provider Trip Distance"  %>
       <p class="disabled-input">
         <% if @trip.bpa_billing_distance %>
           <%= @trip.bpa_billing_distance %>
