--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,1 +1,11 @@
-[trips]
+<div id="page-header">
+  <h1>View Trips</h1>
+</div>
+
+<%= render('search', :allow_csv => true, :action => :index) if @query.display_search_form %>
+
+<h2 id="result-count">
+  <%= pluralize @trips.total_entries, "record" %> found, <%= pluralize @trip_count, "trips" %>.
+</h2>
+
+<%= render 'trips', :trips => @trips %>
