--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @query, :as => :q, :html=>{:id=>"trip-filter", :method=>:get}, :url=>{:action => action} do |f| %>
+<%= form_for @query, :as => :q, :html=>{:id=>"trip-filter", :method=>:get}, :url=>(action == :index ? trips_path : adjustments_trips_path) do |f| %>
   <fieldset>
     <ol class="section first">
       <li>
