--- a/app/views/trips/show_import.html.erb
+++ b/app/views/trips/show_import.html.erb
@@ -54,7 +54,7 @@
         <%= trip_import.trips.count %>
       </td>
       <td>
-        <%= link_to "View", {:action => :list, "q[trip_import_id]" => trip_import.id}, :class => :details %>
+        <%= link_to "View", trips_path("q[trip_import_id]" => trip_import.id), :class => :details %>
       </td>
     </tr>
   <% end %>
