--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Service Database</title>
-  <%= stylesheet_link_tag "style.css", :media=>"screen" %>
-  <%= stylesheet_link_tag "print.css", :media=>"print" %>
+  <%= stylesheet_link_tag "style.css", media: "screen" %>
+  <%= stylesheet_link_tag "print.css", media: "print" %>
   <%= stylesheet_link_tag "jquery-ui-1.8.9.custom.css" %>
 
   <%= javascript_include_tag :defaults %>
@@ -15,11 +15,11 @@
 <body class="<%= bodytag_class %>">
   <div id="header">
     <div class="wrap selfclear">
-      <%= link_to "Ride Connection Service Database", root_url, :id => :logo %>
+      <%= link_to "Ride Connection Service Database", root_url, id: :logo %>
       <div id="login-area">
         <a href="https://apps.rideconnection.org/greenbook/index.php/Category:Service_Database">Help</a>
         <% if current_user %>
-          | <a href="#"><%= current_user.email %></a> | <%= link_to "Log out", logout_path, {:method=>"post"} %>
+          | <a href="#"><%= current_user.email %></a> | <%= link_to "Log out", logout_path, {method: "post"} %>
         <% end %>
       </div>
     </div><!-- /.wrap -->
@@ -27,14 +27,14 @@
   <div id="crossbar">
     <div class="wrap selfclear">             
       <ul id="primary-nav" class="selfclear">
-        <li class="flex-reports"><%= link_to "Flex Reports", :controller => "flex_reports" %></li>
-        <li class="predefined-reports"><%= link_to "Predefined Reports", :controller => "predefined_reports" %></li>
-        <li class="summaries"><%= link_to "Summaries", :controller => "summaries" %></li>
-        <li class="trips"><%= link_to "Trips", :controller => "trips" %></li>
-        <li class="runs"><%= link_to "Runs", :controller => "runs" %></li>
+        <li class="flex-reports"><%= link_to "Flex Reports", flex_reports_path %></li>
+        <li class="predefined-reports"><%= link_to "Predefined Reports", predefined_reports_path %></li>
+        <li class="summaries"><%= link_to "Summaries", summaries_path %></li>
+        <li class="trips"><%= link_to "Trips", trips_path %></li>
+        <li class="runs"><%= link_to "Runs", runs_path %></li>
       </ul>
       <ul id="secondary-nav" class="selfclear">
-        <li class="admin"><%= link_to "Admin", :controller => "admin" %></li>
+        <li class="admin"><%= link_to "Admin", admin_index_path %></li>
       </ul>
     </div><!-- /.wrap -->
   </div><!-- /#crossbar -->
