--- a/app/views/runs/index.html.erb
+++ b/app/views/runs/index.html.erb
@@ -2,12 +2,12 @@
   <h1>View Runs</h1>
 </div>
 
-<%= form_for @query, :html=>{:id=>"run-filter", :method=>:get}, :url=>{:action=>:index} do |f| %>
+<%= form_for @query, html: {id: "run-filter", method: :get}, url: runs_path do |f| %>
   <fieldset>
 
     <ol class="section first">
-      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class=>"datepicker" %></li>
-      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class=>"datepicker" %></li>
+      <li><%= f.label :start_date, "Start Date:" %> <%= f.text_field :start_date, :class => "datepicker" %></li>
+      <li><%= f.label :end_date, "End Date:" %> <%= f.text_field :end_date, :class => "datepicker" %></li>
     </ol>
 
     <div class="actions">
