--- a/app/views/summaries/edit.html.erb
+++ b/app/views/summaries/edit.html.erb
@@ -13,12 +13,12 @@
         <li>
           <% if version == @summary %>
             <%= version.valid_start.localtime.to_s(:full) %>
-            <% else %>
-            <%= link_to version.valid_start.localtime.to_s(:full), :action=>:edit, :id=>version.id %>
+          <% else %>
+            <%= link_to version.valid_start.localtime.to_s(:full), edit_summary_path(version.id) %>
           <% end %>
           by <span class="update-user"><%= version.updater.email %></span> 
-          <%= link_to "", delete_version_summary_path(version), :class => "delete", :method => :delete, :confirm => "Are you sure you want to delete this version?" if !version.latest? && current_user.is_admin %>
-          <%= link_to "", delete_summary_path(version), :class => "delete", :method => :delete, :confirm => "Are you sure you want to delete this summary?" if @versions.size == 1 && current_user.is_admin %>
+          <%= link_to "", delete_version_summary_path(version), :class => "delete", method: :delete, confirm: "Are you sure you want to delete this version?" if !version.latest? && current_user.is_admin %>
+          <%= link_to "", delete_summary_path(version), :class => "delete", method: :delete, confirm: "Are you sure you want to delete this summary?" if @versions.size == 1 && current_user.is_admin %>
         </li>
       <% end %>
     </ul>
@@ -30,8 +30,8 @@
 
   </div><!-- /#history -->
 
-  <%= form_for @summary, :url=>{:action=>:update} do |f| %>
-    <%= render :partial => "form", :locals=>{:f=>f} %>
+  <%= form_for @summary do |f| %>
+    <%= render "form", f: f %>
 
     <% if @summary.latest? && current_user.is_admin -%>
       <div class="actions">
