--- a/app/views/summaries/new.html.erb
+++ b/app/views/summaries/new.html.erb
@@ -2,12 +2,9 @@
   <h1>Create Summary</h1>
 </div>
 
-<%= form_for @summary, :url=>{:action=>:create} do |f| %>
-  <%= render :partial => "form", :locals=>{:f=>f} %>
-
-
+<%= form_for @summary do |f| %>
+  <%= render "form", f: f %>
   <div class="actions">
     <%= submit_tag 'Create' %>
   </div>
-
 <% end %>
