Update view links

--- a/app/views/summaries/adjustments.html.erb
+++ b/app/views/summaries/adjustments.html.erb
@@ -2,7 +2,7 @@
   <h1>Summary Adjustment History</h1>
 </div>
 
-<%= render 'search', :action => :adjustments %>
+<%= render 'search', action: :adjustments %>
 
 <div class="list-wrapper">
   <table id="summary-results">
