--- a/app/views/summaries/index.html.erb
+++ b/app/views/summaries/index.html.erb
@@ -2,6 +2,6 @@
   <h1>View Summaries</h1>
 </div>
 
-<%= render 'search', :action => :index %>
+<%= render 'search', action: :index %>
 
 <%= render "summaries" %>
