--- a/app/views/trips/_trips.html.erb
+++ b/app/views/trips/_trips.html.erb
@@ -31,9 +31,7 @@
             <td><%= raw gmaps_address_link trip.dropoff_address, "trip-dropoff" %></td>
             <td class="number"><%= trip.customers_served %></td>
             <td class="number"><%= number_to_currency trip.fare %></td>
-            <td>
-              <%= link_to "Details", {:controller => :trips, :action=>:show, :id=>trip.id}, {:title=>"View details for this trip", :class => :details} %>
-            </td>
+            <td><%= link_to "Details", trip, {:title=>"View details for this trip", :class => :details} %></td>
           </tr>
         <% end %>
       </tbody>
