--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -2,10 +2,10 @@
   <h1>View Trips</h1>
 </div>
 
-<%= render('search', :allow_csv => true, :action => :index) if @query.display_search_form %>
+<%= render 'search', allow_csv: true, action: :index if @query.display_search_form %>
 
 <h2 id="result-count">
   <%= pluralize @trips.total_entries, "record" %> found, with <%= pluralize @trip_count, "trip" %> completed.
 </h2>
 
-<%= render 'trips', :trips => @trips %>
+<%= render 'trips', trips: @trips %>
