--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -9,37 +9,37 @@
   </td>
   <% if @report.fields.include? 'funds' %>
     <td class="number">
-      <%= number_to_currency(row.funds, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.funds, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'agency_other' %>
     <td class="number">
-      <%= number_to_currency(row.agency_other, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.agency_other, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'vehicle_maint' %>
     <td class="number">
-      <%= number_to_currency(row.vehicle_maint, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.vehicle_maint, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'administrative' %>
     <td class="number">
-      <%= number_to_currency(row.administrative, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.administrative, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'operations' %>
     <td class="number">
-      <%= number_to_currency(row.operations, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.operations, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'donations' %>
     <td class="number">
-      <%= number_to_currency(row.donations, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.donations, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'total' %>
     <td class="number total">
-      <%= number_to_currency(row.total, :precision => currency_precision, :negative_format => "(%u%n)") %>
+      <%= number_to_currency(row.total, precision: currency_precision, negative_format: "(%u%n)") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'in_district_trips' %>
@@ -74,47 +74,47 @@
   <% end %>
   <% if @report.fields.include? 'driver_volunteer_hours' %>
     <td class="number">
-      <%= number_with_precision(row.driver_volunteer_hours, :precision => 1, :delimiter => ',') %>
+      <%= number_with_precision(row.driver_volunteer_hours, precision: 1, delimiter: ',') %>
     </td>
   <% end %>
   <% if @report.fields.include? 'driver_paid_hours' %>
     <td class="number">
-      <%= number_with_precision(row.driver_paid_hours, :precision => 1, :delimiter => ',') %>
+      <%= number_with_precision(row.driver_paid_hours, precision: 1, delimiter: ',') %>
     </td>
   <% end %>
   <% if @report.fields.include? 'driver_total_hours' %>
     <td class="number total">
-      <%= number_with_precision(row.driver_total_hours, :precision => 1, :delimiter => ',') %>
+      <%= number_with_precision(row.driver_total_hours, precision: 1, delimiter: ',') %>
     </td>
   <% end %>
   <% if @report.fields.include? 'cost_per_trip' %>
     <td class="number">
-      <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip, :negative_format => "(%u%n)") : raw("&mdash;") %>
+      <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'cost_per_customer' %>
     <td class="number">
-      <%= row.cost_per_customer.present? ? number_to_currency(row.cost_per_customer, :negative_format => "(%u%n)") : raw("&mdash;") %>
+      <%= row.cost_per_customer.present? ? number_to_currency(row.cost_per_customer, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'cost_per_mile' %>
     <td class="number">
-      <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile, :negative_format => "(%u%n)") : raw("&mdash;") %>
+      <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'cost_per_hour' %>
     <td class="number">
-      <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour, :negative_format => "(%u%n)") : raw("&mdash;") %>
+      <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour, negative_format: "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'miles_per_ride'%>
     <td class="number">
-      <%= row.miles_per_ride.present? ? number_with_precision(row.miles_per_ride, :precision => 1, :delimiter => ",") : raw("&mdash;") %>
+      <%= row.miles_per_ride.present? ? number_with_precision(row.miles_per_ride, precision: 1, delimiter: ",") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'miles_per_customer'%>
     <td class="number">
-      <%= row.miles_per_customer.present? ? number_with_precision(row.miles_per_customer, :precision => 1, :delimiter => ",") : raw("&mdash;") %>
+      <%= row.miles_per_customer.present? ? number_with_precision(row.miles_per_customer, precision: 1, delimiter: ",") : raw("&mdash;") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'turn_downs' %>
@@ -129,17 +129,17 @@
   <% end %>
   <% if @report.fields.include? 'escort_volunteer_hours' %>
     <td class="number">
-      <%= number_with_precision(row.escort_volunteer_hours, :precision => 1, :delimiter => ",") %>
+      <%= number_with_precision(row.escort_volunteer_hours, precision: 1, delimiter: ",") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'admin_volunteer_hours' %>
     <td class="number">
-      <%= number_with_precision(row.admin_volunteer_hours, :precision => 1, :delimiter => ",") %>
+      <%= number_with_precision(row.admin_volunteer_hours, precision: 1, delimiter: ",") %>
     </td>
   <% end %>
   <% if @report.fields.include? 'total_volunteer_hours' %>
     <td class="number total">
-      <%= number_with_precision(row.total_volunteer_hours, :precision => 1, :delimiter => ",") %>
+      <%= number_with_precision(row.total_volunteer_hours, precision: 1, delimiter: ",") %>
     </td>
   <% end %>
   <td class="no-print">
