Added new trip export option

--- a/app/views/trips/_search.html.erb
+++ b/app/views/trips/_search.html.erb
@@ -73,6 +73,7 @@
       <% if allow_csv %>
         <%= f.submit "Export All Data Fields" %>
         <%= f.submit "Export BPA Invoice Data" %>
+        <%= f.submit "Export For Trip Analysis" %>
       <% end %>
     </div>
 
