--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1304,6 +1304,10 @@ input.delete-report:active {
     padding-bottom: 5px;
     margin-bottom: 5px;
 }
+body.flex-reports div.subtitle {
+  font-weight: bold;
+  padding-bottom: 5px;
+}
 body.flex-reports #date-header {
   float: left;
   width: 50%;
